# osquery

./: .gitmodules  CMakeLists.txt
cmake/: flags.cmake
libraries/cmake/source/libmagic/config/linux/: config.h
libraries/cmake/source/lldpd/config/x86_64/linux/libevent/event2/: event-config.h
libraries/cmake/source/modules/: Findsnappy.cmake
libraries/cmake/source/rocksdb/: CMakeLists.txt
libraries/cmake/source/snappy/: CMakeLists.txt
libraries/cmake/source/thrift/: CMakeLists.txt
osquery/core/: shutdown.cpp
osquery/tables/networking/: CMakeLists.txt
osquery/tables/system/linux/: sysctl_utils.cpp
osquery/tables/system/posix/: augeas.cpp  sysctl_utils.h
tools/deployment/: osquery.example.conf
tools/deployment/linux_packaging/rpm/: osqueryd.service
